[package]
name = "generate-epoch-blocks"
version = "0.1.0"
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]

[dependencies]
lmdb-zero = "0.4.4"
byteorder = "1.2.6"
nanocurrency-types = "0.3.14"
hex = "0.3.2"
serde_json = "1.0.32"
atty = "0.2.11"
serde = "1.0.79"
ed25519-dalek = "0.8.1"
blake2 = "0.7.0"
serde_derive = "1.0.79"
reqwest = "0.9.2"
tokio = "0.1.11"
